# QuickBool

./: .gitignore  CMakeLists.txt
include/: BitVector.h  BoolAlgorithms.h  BoolAnd.h  BoolBasicDefs.h  BoolBit.h  BoolConstants.h  BoolExpr.h  BoolFunc.h  BoolManager.h  BoolNaryExpr.h  BoolNot.h  BoolOr.h  BoolType.h  QuickBool.h
src/: BoolAlgorithms.cpp  BoolAnd.cpp  BoolBasicDefs.cpp  BoolBit.cpp  BoolConstants.cpp  BoolFunc.cpp  BoolManager.cpp  BoolNaryExpr.cpp  BoolNot.cpp  BoolOr.cpp  BoolType.cpp  BoolVector.cpp  CMakeLists.txt
tests/: BoolAlgorithms_Test.cpp  BoolBit_Test.cpp  BoolManager_Test.cpp  BoolOps_Test.cpp  BoolVector_Test.cpp
